# karesz-online

./: .gitignore  .prettierrc  LICENSE  Program.cs  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  svelte.config.js  svgen.js  tailwind.config.cjs  tailwind.config.js  test.json  tsconfig.json  xd.json
.next/: trace
.next/server/: _error.js
app/: Dockerfile  _527b1644.cs  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.next.json  tsconfig.server.json
app/test/: test.runtimeconfig.json
dotnet/: main.go
karesz-next/: package-lock.json  package.json  server.js  tsconfig.json
karesz-next/pages/: index.tsx
lib/: karesz-dotnet.ts  karesz-frontend.ts  karesz-ss.ts  karesz.ts
nginx/: Dockerfile  default.html  nodeapp.conf
pages/: index.tsx
runner/: Cargo.toml  Dockerfile  Program.cs  dummy.cs  test.runtimeconfig.json
runner/src/: create.rs  karesz.rs  main.rs  prepare.rs  run.rs
runner/src/create/: karesz.rs  prepare.rs  run.rs
src/: app.css  global.d.ts  hooks.ts
src/components/: Edit.tsx  Game.tsx  JoinGame.tsx  Navbar.tsx  PlayerCard.tsx  PreJoin.tsx  ScoreBoard.tsx
src/lib/: tmp.ts  util.ts
src/pages/: _app.tsx  index.tsx
src/routes/: [id].svelte  __error.svelte  index.svelte
src/server/: index.ts
templates/: Multiplayer.cs  Singleplayer.cs
testing/: Program.cs
testing/39d93ea5bc/: 39d93ea5bc.cs
testing/3ac17207a8/: 3ac17207a8.cs
testing/45a3da2e88/: 45a3da2e88.cs
testing/4bcba4c666/: 4bcba4c666.cs
testing/521e375cc6/: 521e375cc6.cs
(+226 files in other folders)
