[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
serde = "1.0.130"
rand = "0.8.5"
urlencoding = "2.1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
